# sdl3-opengl-template

./: CMakeLists.txt  README.md  WINDOW  main.cpp  main.h
lib/shaders/: frag.glsl  vertex.glsl
